# sentient-brain-smithery

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_FIX_SUMMARY.md  Dockerfile  LICENSE  PLATFORM_SETUP.md  README.md  SMITHERY_DEPLOYMENT_SUMMARY.md  mcp_server.py  pyproject.toml  quick_test.py  requirements-minimal.txt  requirements.txt  simple_validate.py  smithery.json  smithery.yaml  smithery_debug.py  startup_test.py  test_deployment.py  test_server_startup.py  validate_deployment.py
src/: __init__.py  admin_ui.py  main.py  mcp_server.py
src/agents/: __init__.py  architect_agent.py  codebase_memory_agent.py  debug_refactor_agent.py  failure_prevention.py  orchestrator.py  ultra_orchestrator.py
src/db/: surreal_client.py
src/models/: __init__.py  agent_models.py  knowledge_models.py  memory_layers.py  workflow_models.py
src/services/: __init__.py  groq_service.py  memory_service.py  surreal_service.py
src/workflows/: agent_workflow.py
